Fixing invisible entities

--- a/frontend/src/assets/styles/codemirror.scss
+++ b/frontend/src/assets/styles/codemirror.scss
@@ -71,7 +71,7 @@
 }
 
 .cm-s-aista span.cm-string.cm-property {
-  color: #ffffec;
+  color: #41412f;
 }
 
 .cm-s-aista span.cm-variable {
@@ -105,7 +105,7 @@
 }
 
 .cm-s-aista span.cm-qualifier {
-  color: #ffffec;
+  color: #646452;
 }
 
 .cm-s-aista .CodeMirror-activeline-background {
